Changes to publications

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>Sheena Panthaplackel</h4>
-              <span>spantha@cs.utexas.edu</span>
+              <span>spantha@utexas.edu</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
@@ -76,9 +76,14 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>Publications</h2>
             <div class="line-dec"></div>
+            <p>
+              <a href="">CoditT5: Pretraining for Source Code and Natural Language Editing</a>
+              <br>Jiyang Zhang, <strong>Sheena Panthaplackel</strong>, Pengyu Nie, Junyi Jessy Li, and Milos Gligoric
+              <br>Accepted in International Conference on Automated Software Engineering (ASE), 2022</p>
+
               <p>
               <a href="https://aclanthology.org/2022.acl-long.446.pdf">Updated Headline Generation: Creating Updated Summaries for Evolving News Stories</a>
-              <br>[<a href="https://github.com/panthap2/updated-headline-generation">Data</a>, <a href="https://www.cs.utexas.edu/users/ml/slides/panthaplackel.acl22updated.pdf">Poster</a>]
+              <br>[<a href="https://github.com/panthap2/updated-headline-generation">Data</a>, <a href="https://www.cs.utexas.edu/users/ml/slides/panthaplackel.acl22updated.pdf">Slides</a>, <a href="https://www.cs.utexas.edu/users/ml/posters/panthaplackel.acl22updated.pdf">Poster</a>]
               <br><strong>Sheena Panthaplackel</strong>, Adrian Benton, and Mark Dredze
               <br>Association for Computational Linguistics (ACL), 2022</p>
 
