--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>About Me</h2>
             <div class="line-dec"></div>
-            <p>I am a fifth-year PhD student in the Department of Computer Science at The University of Texas at Austin.
+            <p>I am completed my PhD in the Department of Computer Science at The University of Texas at Austin.
               I am advised by <a href="https://www.cs.utexas.edu/~mooney/">Prof. Raymond Mooney</a> and <a href="https://jessyli.com/">Prof. Junyi Jessy Li</a>. 
               My research lies at the intersection of Machine Learning, Natural Language Processing, and Software Engineering.
               I am a recipient of the <a href="https://www.techatbloomberg.com/blog/announcing-the-bloomberg-data-science-ph-d-fellowship-winners-for-2020-2021/">2020-2021 Bloomberg Data Science Ph.D. Fellowship</a>.
