--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-531-reflux
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <p>I completed my PhD in Computer Science at The University of Texas at Austin in 2022.
-              I am advised by <a href="https://www.cs.utexas.edu/~mooney/">Prof. Raymond Mooney</a> and <a href="https://jessyli.com/">Prof. Junyi Jessy Li</a>. 
+              I was advised by <a href="https://www.cs.utexas.edu/~mooney/">Prof. Raymond Mooney</a> and <a href="https://jessyli.com/">Prof. Junyi Jessy Li</a>. 
               My research lies at the intersection of Machine Learning, Natural Language Processing, and Software Engineering.
               I am a recipient of the <a href="https://www.techatbloomberg.com/blog/announcing-the-bloomberg-data-science-ph-d-fellowship-winners-for-2020-2021/">2020-2021 Bloomberg Data Science Ph.D. Fellowship</a>.
               I completed my B.S. in Computer Science at the University of Illinois at Urbana-Champaign in 2016. My CV can be found
@@ -77,7 +77,7 @@ https://templatemo.com/tm-531-reflux
             <h2>Publications</h2>
             <div class="line-dec"></div>
             <p>
-              <a href="">CoditT5: Pretraining for Source Code and Natural Language Editing</a>
+              <a href="https://arxiv.org/pdf/2208.05446.pdf">CoditT5: Pretraining for Source Code and Natural Language Editing</a>
               <br>Jiyang Zhang, <strong>Sheena Panthaplackel</strong>, Pengyu Nie, Junyi Jessy Li, and Milos Gligoric
               <br>Accepted in International Conference on Automated Software Engineering (ASE), 2022</p>
 
