Adding new paper

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@ https://templatemo.com/tm-531-reflux
             <h2>Publications</h2>
             <div class="line-dec"></div>
             <p>
+              <a href="">Using Developer Discussions to Guide Fixing Bugs in Software</a>
+              <br><strong>Sheena Panthaplackel</strong>, Milos Gligoric, Junyi Jessy Li, and Raymond J. Mooney
+              <br>Accepted in Findings of Conference on Empirical Methods in Natural Language Processing (EMNLP), 2022</p>
+
+            <p>
               <a href="https://arxiv.org/pdf/2208.05446.pdf">CoditT5: Pretraining for Source Code and Natural Language Editing</a>
               <br>Jiyang Zhang, <strong>Sheena Panthaplackel</strong>, Pengyu Nie, Junyi Jessy Li, and Milos Gligoric
               <br>Accepted in International Conference on Automated Software Engineering (ASE), 2022</p>
