--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ https://templatemo.com/tm-531-reflux
             <h2>Publications</h2>
             <div class="line-dec"></div>
             <p>
-              <a href="">Using Developer Discussions to Guide Fixing Bugs in Software</a>
+              <a href="https://arxiv.org/ftp/arxiv/papers/2211/2211.06335.pdf">Using Developer Discussions to Guide Fixing Bugs in Software</a>
               <br><strong>Sheena Panthaplackel</strong>, Milos Gligoric, Junyi Jessy Li, and Raymond J. Mooney
               <br>Accepted in Findings of Conference on Empirical Methods in Natural Language Processing (EMNLP), 2022</p>
 
