--- a/index.html
+++ b/index.html
@@ -78,8 +78,15 @@ https://templatemo.com/tm-531-reflux
             <div class="line-dec"></div>
             <p>
               <a href="https://arxiv.org/ftp/arxiv/papers/2211/2211.06335.pdf">Using Developer Discussions to Guide Fixing Bugs in Software</a>
+              <br>[<a href="https://github.com/panthap2/developer-discussions-for-bug-fixing">Data</a>, <a href="https://www.cs.utexas.edu/users/ml/slides/panthaplackel.emnlp22.slides.pdf">Slides</a>]
               <br><strong>Sheena Panthaplackel</strong>, Milos Gligoric, Junyi Jessy Li, and Raymond J. Mooney
               <br>Accepted in Findings of Conference on Empirical Methods in Natural Language Processing (EMNLP), 2022</p>
+            
+            <p>
+              <a href="https://www.cs.utexas.edu/users/ml/papers/panthaplackel.phdthesis22.pdf">Facilitating Software Evolution through Natural Language Comments and Dialogue</a>
+              <br>[<a href="https://www.cs.utexas.edu/users/ml/slides/panthaplackel.phdthesis22.slides.pdf">Slides</a>]
+              <br><strong>Sheena Panthaplackel</strong>
+              <br>PhD Thesis, 2022</p>
 
             <p>
               <a href="https://arxiv.org/pdf/2208.05446.pdf">CoditT5: Pretraining for Source Code and Natural Language Editing</a>
