--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>About Me</h2>
             <div class="line-dec"></div>
-            <p>I am a research scientist at Google Brain. I completed my PhD in Computer Science at The University of Texas at Austin in 2022.
+            <p>I am a research scientist at Google DeepMind. I completed my PhD in Computer Science at The University of Texas at Austin in 2022.
               I was advised by <a href="https://www.cs.utexas.edu/~mooney/">Prof. Raymond Mooney</a> and <a href="https://jessyli.com/">Prof. Junyi Jessy Li</a>. 
               My research lies at the intersection of Machine Learning, Natural Language Processing, and Software Engineering.
               I am a recipient of the <a href="https://www.techatbloomberg.com/blog/announcing-the-bloomberg-data-science-ph-d-fellowship-winners-for-2020-2021/">2020-2021 Bloomberg Data Science Ph.D. Fellowship</a>.
@@ -77,10 +77,14 @@ https://templatemo.com/tm-531-reflux
             <h2>Publications</h2>
             <div class="line-dec"></div>
             <p>
+              <a href="https://arxiv.org/pdf/2402.08699">Unsupervised Evaluation of Code LLMs with Round-Trip Correctness</a>
+              <br>Miltiadis Allamanis, <strong>Sheena Panthaplackel</strong>, Pengcheng Yin
+              <br>International Conference on Machine Learning (ICML), 2024</p>
+            <p>
               <a href="https://arxiv.org/ftp/arxiv/papers/2211/2211.06335.pdf">Using Developer Discussions to Guide Fixing Bugs in Software</a>
               <br>[<a href="https://github.com/panthap2/developer-discussions-for-bug-fixing">Data</a>, <a href="https://www.cs.utexas.edu/users/ml/slides/panthaplackel.emnlp22.slides.pdf">Slides</a>]
               <br><strong>Sheena Panthaplackel</strong>, Milos Gligoric, Junyi Jessy Li, and Raymond J. Mooney
-              <br>Accepted in Findings of Conference on Empirical Methods in Natural Language Processing (EMNLP), 2022</p>
+              <br>Findings of Conference on Empirical Methods in Natural Language Processing (EMNLP), 2022</p>
             
             <p>
               <a href="https://www.cs.utexas.edu/users/ml/papers/panthaplackel.phdthesis22.pdf">Facilitating Software Evolution through Natural Language Comments and Dialogue</a>
@@ -91,7 +95,7 @@ https://templatemo.com/tm-531-reflux
             <p>
               <a href="https://arxiv.org/pdf/2208.05446.pdf">CoditT5: Pretraining for Source Code and Natural Language Editing</a>
               <br>Jiyang Zhang, <strong>Sheena Panthaplackel</strong>, Pengyu Nie, Junyi Jessy Li, and Milos Gligoric
-              <br>Accepted in International Conference on Automated Software Engineering (ASE), 2022</p>
+              <br>International Conference on Automated Software Engineering (ASE), 2022</p>
 
               <p>
               <a href="https://aclanthology.org/2022.acl-long.446.pdf">Updated Headline Generation: Creating Updated Summaries for Evolving News Stories</a>
